--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,10 @@
 			<version>2.5.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.13.2</version>
@@ -112,6 +116,7 @@
 			<version>5.10.2</version>
 			<scope>test</scope>
 		</dependency>
+
 
 
 	</dependencies>
