--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,14 @@ spring.flyway.enabled=false
 jwt.secret=lPjjh/q73LSKipCKPvC2GR8/5vSM52b4O8MOTEqCp9E=
 jwt.lifetime=20m
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mrhindexian@gmail.com
+spring.mail.password=123456789qQ
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.task.scheduling.pool.size=10
+
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
