--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,7 @@
 	</dependencies>
 
 	<build>
+		<testSourceDirectory>src/test/java</testSourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
